--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scikit-learn = "^1.0.2"
 sentence-transformers = "^2.2.0"
 torch = "^1.11.0"
 hdbscan = "^0.8.28"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
