--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
+ipykernel = "^6.9.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
